# suckc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gen-parser.sh
cmake/: FindAntlr4Ex.cmake  fake-java.sh  options.cmake
docs/: design.md
src/: Block.cpp  Block.h  Class.h  Code.cpp  Code.h  Context.cpp  Context.h  DamnSourceContext.cpp  DamnSourceContext.h  DamnSourceGenerator.cpp  DamnSourceGenerator.h  DamnSuckCVisitor.cpp  DamnSuckCVisitor.h  Element.cpp  Element.h  Module.cpp  Module.h  ParserTreeHelper.cpp  ParserTreeHelper.h  Scope.cpp  Scope.h  SourceContext.cpp  SourceContext.h  SourceGenerator.cpp  SourceGenerator.h  SuckC.g4  SuckCBlock.cpp  SuckCBlock.h  SuckCClass.h  SuckCCode.cpp  SuckCCode.h  SuckCElement.cpp  SuckCElement.h  SuckCLexer.g4  SuckCModule.cpp  SuckCModule.h  SuckCParser.g4  SuckCParserBase.cpp  SuckCParserBase.h  SuckCScope.cpp  (+5 more)
src/ast/: Alias.cpp  Alias.h  Attribute.h  Expression.h  Function.h  FunctionDeclaration.h  FunctionVarBody.h  IdExpression.cpp  IdExpression.h  Literal.cpp  Literal.h  Node.cpp  Node.h  Specifier.h  Statement.h  Struct.h  TypeDeclaration.h  TypedefAlias.h  Variable.h
